# kafka_messaging_02

./: compose.yml
microservice_02/: pyproject.toml
microservice_02/app/: main.py
microservice_02/tests/: test_main.py
todo/: pyproject.toml
todo/app/: main.py  todo.proto
