[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Zain Babar <zainibaba1990@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
aiokafka = "^0.10.0"
sqlmodel = "^0.0.18"
psycopg = "^3.1.19"
protobuf = "^5.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
